# Grocery_Store

./: Cargo.toml
src/: cart.rs  grocery_shop.rs  main.rs  pages.rs  styles.rs  user.rs
src/grocery_shop/: catalog.json  catalog.rs  categories.json
src/pages/: catalog_page_state.rs  category_page_state.rs  entry_page_state.rs  purchase_page_state.rs
src/user/: client_trait.rs
