[package]
name = "grocery-shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["svg"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
